[gd_scene load_steps=3 format=3 uid="uid://crafting_chain_scene"]

[ext_resource type="Script" path="res://scripts/crafting_chain.gd" id="1_crafting"]

[sub_resource type="BoxMesh" id="BoxMesh_ground"]
size = Vector3(40, 0.5, 40)

[node name="CraftingChainScene" type="Node3D"]
script = ExtResource("1_crafting")

[node name="SimulationManager" type="SimulationManager" parent="."]

[node name="EventBus" type="EventBus" parent="."]

[node name="ToolRegistry" type="ToolRegistry" parent="."]

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="Environment"]
mesh = SubResource("BoxMesh_ground")
skeleton = NodePath("../..")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 10)
shadow_enabled = true

[node name="BaseResources" type="Node3D" parent="."]

[node name="IronOre1" type="Area3D" parent="BaseResources"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.5, -10)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseResources/IronOre1"]
mesh = SubResource("BoxMesh_ground")

[node name="IronOre2" type="Area3D" parent="BaseResources"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0.5, -8)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseResources/IronOre2"]
mesh = SubResource("BoxMesh_ground")

[node name="Wood1" type="Area3D" parent="BaseResources"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.5, -12)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseResources/Wood1"]
mesh = SubResource("BoxMesh_ground")

[node name="Wood2" type="Area3D" parent="BaseResources"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.5, -14)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseResources/Wood2"]
mesh = SubResource("BoxMesh_ground")

[node name="Coal1" type="Area3D" parent="BaseResources"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.5, -10)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseResources/Coal1"]
mesh = SubResource("BoxMesh_ground")

[node name="Coal2" type="Area3D" parent="BaseResources"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0.5, -12)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseResources/Coal2"]
mesh = SubResource("BoxMesh_ground")

[node name="CraftingStations" type="Node3D" parent="."]

[node name="Furnace" type="Area3D" parent="CraftingStations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CraftingStations/Furnace"]
mesh = SubResource("BoxMesh_ground")

[node name="Anvil" type="Area3D" parent="CraftingStations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CraftingStations/Anvil"]
mesh = SubResource("BoxMesh_ground")

[node name="Workbench" type="Area3D" parent="CraftingStations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CraftingStations/Workbench"]
mesh = SubResource("BoxMesh_ground")

[node name="Agents" type="Node3D" parent="."]

[node name="Agent1" type="Agent" parent="Agents"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 10)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 20)
current = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="MetricsLabel" type="Label" parent="UI"]
offset_right = 500.0
offset_bottom = 200.0
text = "Crafting Chain Benchmark
Items Crafted: 0
Recipe Efficiency: 0%
Resource Waste: 0
Crafting Time: 0s"
